// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportsDownloadRow render 1`] = `
<tr>
  <td>
    Optimization analysis report
  </td>
  <td>
    <select
      className="form-control form-control-sm"
      onChange={[Function]}
      value="csv"
    >
      <option
        key="csv"
        value="csv"
      >
        csv
      </option>
      <option
        key="json"
        value="json"
      >
        json
      </option>
      <option
        key="xls"
        value="xls"
      >
        xls
      </option>
    </select>
  </td>
  <td
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <button
      className="btn btn-sm btn-primary"
      onClick={[Function]}
      style={
        Object {
          "minWidth": "120px",
        }
      }
    >
      <span>
        <i
          className="fa fa-download"
        />
         Download
      </span>
    </button>
  </td>
</tr>
`;

exports[`When modal is hidden 1`] = `
<div
  className="modal fade "
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body aro-modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th
                style={
                  Object {
                    "minWidth": "70px",
                  }
                }
              >
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`When modal is initially hidden and then shown 1`] = `
<div
  className="modal fade "
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body aro-modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th
                style={
                  Object {
                    "minWidth": "70px",
                  }
                }
              >
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`When modal is initially hidden and then shown 2`] = `
<div
  className="modal fade show"
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body aro-modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th
                style={
                  Object {
                    "minWidth": "70px",
                  }
                }
              >
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`When modal is shown 1`] = `
<div
  className="modal fade show"
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body aro-modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th
                style={
                  Object {
                    "minWidth": "70px",
                  }
                }
              >
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`When reports metadata is defined 1`] = `
<div
  className="modal fade "
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body aro-modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th
                style={
                  Object {
                    "minWidth": "70px",
                  }
                }
              >
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody>
            <ReportsDownloadRow
              displayName="Optimization Analysis"
              key="0"
              mediaTypes={
                Array [
                  "csv",
                  "json",
                  "xls",
                ]
              }
              planId={100}
              reportId={4}
            />
          </tbody>
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`When reports metadata is null 1`] = `
<div
  className="modal fade "
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body aro-modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th
                style={
                  Object {
                    "minWidth": "70px",
                  }
                }
              >
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
